KinD/TraefiKind/kinginx-pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: foo
  labels:
    name: foo
spec:
  containers:
  - name: foo
    image: hashicorp/http-echo:0.2.3
    args:
    - "-text=foo"
    resources:
      limits:
        memory: "64Mi"
        cpu: "250m"
    ports:
      - containerPort: 5678
        hostPort: 80
