KinD/TraefiKind/tk-dashboard-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ingress
  namespace: kubernetes-dashboard

spec:
  rules:
  - http:
      paths:
      - pathType: Exact
        path: "/dashboard"
        backend:
          service:
            name: kubernetes-dashboard
            port: 
              number: 443
