KinD/TraefiKind/tk-ingress2.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami-ingress

spec:
  rules:
  - host: whoami.0a0f122c.nip.io
    http:
      paths:
      - pathType: Exact
        path: "/"
        backend:
          service:
            name: whoami-service
            port: 
              number: 80
